# OpenGLPacman

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
res/fonts/: font.json
res/maps/: level.json  level.tmx
res/shaders/: font.frag  font.vert  sprite.frag  sprite.vert
res/shaders/debug/: solid_color.frag  solid_color.vert
src/: main.cpp
src/Core/: Log.cpp  Log.h  Window.cpp  Window.h
src/Core/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/Core/Systems/: Renderer.cpp  Renderer.h
src/Game/: Game.cpp  Game.h
src/Game/Entities/: Node.h  Pacman.cpp  Pacman.h  PlayableCharacter.cpp  PlayableCharacter.h
src/IO/: Log.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
src/IO/Audio/: AudioEmitter.cpp  AudioEmitter.h
src/IO/Tilemap/: Tilemap.cpp  Tilemap.h
src/Rendering/: AnimatedSprite.cpp  AnimatedSprite.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
src/Rendering/Debug/: DebugShapes.cpp  DebugShapes.h
src/Rendering/Font/: BitmapFont.cpp  BitmapFont.h
src/Rendering/Sprite/: AnimatedSprite.cpp  Sprite.cpp  Sprite.h  TileSprite.cpp  TileSprite.h
